<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.HomeFragment">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_material_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/CustomCardViewStyle"
        app:cardBackgroundColor="@color/blue"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_card"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/_25sdp">

            <TextView
                android:id="@+id/text_dashboard_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/my_dashboard"
                android:textSize="@dimen/_18ssp"
                android:layout_marginLeft="@dimen/_10sdp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:fontFamily="@font/poppins_bold"/>


            <ImageView
                android:id="@+id/image_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_search_24"
                app:layout_constraintLeft_toRightOf="@+id/text_dashboard_title"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="@dimen/_20sdp"/>

            <ImageView
                android:id="@+id/image_notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_notifications_none_24"
                app:layout_constraintLeft_toRightOf="@+id/image_search"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="@dimen/_5sdp"/>

            <ImageView
                android:id="@+id/image_mail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_mail_outline_24"
                app:layout_constraintLeft_toRightOf="@+id/image_notification"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="@dimen/_5sdp"/>

            <ImageView
                android:id="@+id/image_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/image_mail"
                android:src="@drawable/ic_user_profile_svgrepo_com"/>

            <EditText
                android:id="@+id/edit_coin_status"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/_30_coins"
                android:textSize="@dimen/_8ssp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:paddingTop="@dimen/_5sdp"
                android:fontFamily="@font/poppins_bold"
                android:textColorHint="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/image_profile"
                app:layout_constraintLeft_toLeftOf="@+id/image_profile"
                app:layout_constraintRight_toRightOf="@+id/image_profile"
                android:background="@drawable/edit_background_roundable"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_scan"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:background="@drawable/edit_background_roundable"
                app:layout_constraintTop_toBottomOf="@+id/text_dashboard_title"
                app:layout_constraintLeft_toLeftOf="@+id/text_dashboard_title"
                app:layout_constraintRight_toRightOf="@+id/text_dashboard_title">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_5sdp"
                android:textColor="@color/white"
                android:textSize="@dimen/_8ssp"
                android:textAlignment="textStart"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/scan_n_lorem_ipsum"/>

                <ImageView
                    android:id="@+id/image_arrow"
                    android:layout_width="@dimen/_10sdp"
                    android:layout_height="@dimen/_10sdp"
                    android:layout_margin="@dimen/_5sdp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:src="@drawable/ic_baseline_arrow_forward_24"
                    app:layout_constraintEnd_toEndOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_sell"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:background="@drawable/edit_background_roundable"
                app:layout_constraintTop_toBottomOf="@+id/text_dashboard_title"
                app:layout_constraintLeft_toRightOf="@+id/constraint_scan"
                app:layout_constraintStart_toStartOf="@+id/image_notification"
                app:layout_constraintEnd_toEndOf="@+id/image_profile">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_5sdp"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_8ssp"
                    android:textAlignment="textStart"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/scan_n_lorem_ipsum"/>

                <ImageView
                    android:id="@+id/image_arrow_2"
                    android:layout_width="@dimen/_10sdp"
                    android:layout_height="@dimen/_10sdp"
                    android:layout_margin="@dimen/_5sdp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:src="@drawable/ic_baseline_arrow_forward_24"
                    app:layout_constraintEnd_toEndOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>


    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_material_view"
        android:layout_margin="@dimen/_25sdp"
        android:text="@string/available_to_buy"
        android:textColor="@color/blue"
        android:textSize="@dimen/_18ssp"
        android:fontFamily="@font/poppins_bold"/>

    <TextView
        android:id="@+id/text_see_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_28sdp"
        android:layout_marginStart="@dimen/_25sdp"
        android:text="@string/see_all"
        android:textColor="@color/blue"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintTop_toBottomOf="@+id/card_material_view"
        app:layout_constraintLeft_toRightOf="@+id/text_title"
        app:layout_constraintRight_toRightOf="parent"
        android:fontFamily="@font/poppins_regular"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_coin_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:listitem="@layout/adapter_coin_list"
        android:layout_marginTop="@dimen/_15sdp"
        app:layout_constraintTop_toBottomOf="@+id/text_title"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ProgressBar
        android:id="@+id/progress_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:indeterminateTint="@color/blue"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>